--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,62 +1,110 @@
 <h1>Coffee Creativity</h1>
 
 <div class=ideas>
-    <div>
-        <%= image_tag "coffee-experiements-stand.jpg", :height => "400px"%>
-        
-        <%= image_tag "coffee-experiments-caltrain-cozy.jpg", :height => "400px"%>
-    </div>
+  <div>
+      <%= image_tag "coffee-experiements-stand.jpg", :height => "400px"%>
+      <%= image_tag "coffee-experiments-caltrain-cozy.jpg", :height => "400px"%>
+  </div>
 
-      <p>Mason jars are so versitle. From jams, to grains, to liquids for storage. Pour over brew on this hand-crafted wooden brew stand, made to fit this ball jar. This vessel also makes an excellent travel mug for the morning commute, kept warm by a hand crocheted jar cozy.</p>
+  <p>
+    Mason jars make excellent travel mugs. V-60 pourover prepared on this hand-crafted wooden brew stand, made to fit the ball jar. The crocheted jar cozy keeps it warm from home to train via bicycle on the daily SF-PA commute.
+  </p>
 </div>
 
 <div class=ideas>
-    <div>
+  <div>
+    <%= image_tag "coffee-experiments-sightglass-4.jpg", :height => "270px"%>
+    <%= image_tag "coffee-experiments-sightglass-1.jpg", :height => "270px"%>
+    <%= image_tag "coffee-experiments-soy-coldbrew.jpg", :height => "270px"%>
+  </div>
+
+  <p>
+    But in case you ran out of beans at home, you can stop in Sight Glass on 7th Street in San Francisco. Or maybe it's time for a cold brew with vanilla soy... They roast their beans on the spot.
+  </p>
+</div>
+
+<div class=ideas>
+  <div>
     <%= image_tag "coffee-experiments-fourbarrel-jars.jpg", :height => "300px"%>
-    </div>
+    <%= image_tag "coffee-experiments-fourbarrel-roaster.jpg", :height => "300px"%>
 
-      <p>Fourbarrel bean storage at their site in the Mission, SF. Artistic, hipster, and incredible that they go through all these beans in a mere few days.</p>
+  </div>
+
+  <p>
+    Maybe you might find yourself in the Mission District where Fourbarrel takes residence. They too roast their beans onsite. The community style seating and local art contributes to the heavy hipster atmosphere expected to be found on Valencia St.
+  </p>
 </div>
 
 <div class=ideas>
-    <div>
-        <%= image_tag "coffee-experiments-siphon-brewer.jpg",:height => "300px"%>
-        <%= image_tag "coffee-experiments-bluemountain.jpg", :height => "300px"%>
-    </div>
+  <div>
+    <%= image_tag "coffee-experiments-siphon-brewer.jpg",:height => "300px"%>
+    <%= image_tag "coffee-experiments-bluemountain.jpg", :height => "300px"%>
+  </div>
 
-      <p>Siphon brewers in Taiwan with Blue Mountain coffee. A strange place to have this coffee kiosk in the middle of a super mall in Taipei, but good coffee is not dependent on the surroundings, only enhanced.</p>
+  <p>
+    Siphon brewers in Taiwan with Blue Mountain coffee. An unexpected place to have found this coffee kiosk in the middle of a super mall in Taipei, but good coffee is not dependent on the surroundings, only enhanced.
+  </p>
 </div>
 
 
 <div class=ideas>
-    <div>
-        <%= image_tag "coffee-experiments-hario-grinder-sightglass.jpg",:height => "300px"%>
-        <%= image_tag "coffee-experiments-clever-sightglass.jpg",:height => "300px"%>
-    </div>
+  <div>
+    <%= image_tag "coffee-experiments-stumptown-1.jpg", :height => "270px"%>
+		<%= image_tag "coffee-experiments-cup-stumptown.jpg", :height => "270px"%>
+  </div>
 
-      <p>Grind your beans by hand with a hario burr grinder. Sightglass coffee from 7th Street in San Francisco. Brewed in a Clever to bring out the best of full immersion brewing in combination with a paper filter.</p>
+  <p>
+    Coffee from Stumptown in Portland, OR, brings flavors from the northwest. We are lucky enough to have it brewed by local shops, including Flour and Co, on Hyde and California by the Trader Joes. This particular brew was enjoyed in Portland herself, after a 10hr drive from SF. 
+  </p>
 </div>
 
 <div class=ideas>
-    <div>
-		<%= image_tag "coffee-experiments-cup-stumptown.jpg", :height => "300px"%>
-    </div>
+  <div>
+    <%= image_tag "coffee-experiments-wreckingball-1.jpg", :height => "300px"%>
+    <%= image_tag "coffee-experiments-wreckingball-2.jpg", :height => "300px"%>
+  </div>
 
-      <p>Coffee from Stumptown, in Portland, OR, brings flavors from the northwest.</p>
+  <p>
+    Wrecking Ball Coffee, located on Union St on the north side of SF, makes the best pour over brew. A large statement for a relatively new roaster, but their use of a Kalita pourover makes all the difference. This method allows for the beans to be immersed, but not over brewed, and reach the full potential of expertly sourced and roasted beans.
+  </p>
 </div>
 
+<div class=ideas>
+  <div>
+    <%= image_tag "coffee-experiments-contraband-1.jpg", :height => "270px"%>
+    <%= image_tag "coffee-experiments-contraband-4.jpg", :height => "270px"%>
+    <%= image_tag "coffee-experiments-contraband-3.jpg", :height => "270px"%>
+  </div>
 
-<%= image_tag "coffee-experiments-cup-pigandpepper.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-soy-coldbrew.jpg", :height => "300px"%>
+  <p>
+    Contraband roasts their coffee a bit darker than the typical SF roasters, medium roasts being the lightest they serve. A cappuccino rounds out and presents this espresso nicely. Also SF based, located on California in Nob Hill.
+  </p>
+
+
+<%= image_tag "coffee-experiments-sightglass-2.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-hario-grinder-sightglass.jpg",:height => "300px"%>
+<%= image_tag "coffee-experiments-sightglass-7.jpg", :height => "300px"%>
+
+<%= image_tag "coffee-experiments-sightglass-5.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-sightglass-6.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-contraband-2.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-contraband-5.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-wreckingball-3.jpg", :height => "300px"%>
+
 <%= image_tag "coffee-experiments-four-barrel-beans.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-fourbarrel-roaster.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-mae-market.jpg", :height => "300px"%>
-<%= image_tag "coffee-experiments-me-stumptown.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-mug-side-pigpepper.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-mokapot-small.png", :height => "170px"%>
+<%= image_tag "coffee-experiments-cup-transfer.jpg", :height => "300px"%>
 
-<%= image_tag "coffee-experiments-windowseat-stumptown.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-masonjar.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-mug-rack.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-sign.jpg", :height => "300px"%>
 <%= image_tag "coffee-experiments-siphon-maker.jpg", :height => "300px"%>
+
+<%= image_tag "coffee-experiments-coffeeshop.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-sightglass-8.jpg", :height => "300px"%>
+<%= image_tag "coffee-experiments-clever-sightglass.jpg", :height => "300px"%>
+
 
 
 
