--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
 <head>
   <title>CoffeeExperiments</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <link rel="icon" type="image/ico" href="/favicon.png"/>
+
   <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -17,32 +18,63 @@
         <tr>
           <td class="<%= "current" if request.path == root_path %>">
             <li>
-            <a href="<%= root_path %>">The Experiments</a>
-                 <ul id="menu">                
-                  <li> <a href="<%=methods_frenchpress_path %>">Experiment 1</a></li>
-                  <li> <a href="<%=methods_clever_path %>">Experiment 2</a></li>
-                  <li> <a href="<%=methods_pourover_path %>">Experiment 3</a></li>             
-                </ul>
-              </li>
+              <a href="<%= root_path %>">
+                The Experiments
+              </a>
+              <ul id="menu">                
+                <li> 
+                  <a style="margin-left:15px" href="<%=root_path%>#experiment1">
+                    Experiment 1
+                  </a>
+                </li>
+                
+                <li> 
+                  <a style="margin-left:15px" href="<%=root_path%>#experiment2">
+                    Experiment 2
+                  </a>
+                </li>
+                <!-- <li> <a href="<%=methods_pourover_path %>">Experiment 3</a></li> 
+                -->             
+              </ul>
+            </li>
           </td>
           <td class="<%= "current" if request.path == methods_index_path %>">            
-              <li>
-                <a href="<%= methods_index_path %>">Methods</a>
-                <ul id="menu">                
-                  <li> <a href="<%=methods_frenchpress_path %>">French Press</a></li>
-                  <li> <a href="<%=methods_clever_path %>">Clever</a></li>
-                  <li> <a href="<%=methods_pourover_path %>">Pour Over</a></li>
-                  <!-- <li> <a href="<%=methods_aeropress_path %>">Aeropress</a></li> 
-                  <li> <a href="<%=methods_mokapot_path %>">Moka Pot</a></li>
-                  <li> <a href="<%=methods_siphon_path %>">Siphon</a></li> -->                
-                </ul>
-              </li>
+            <li>
+              <a href="<%= methods_index_path %>">Methods</a>
+              <ul id="menu">                
+                <li> 
+                  <a style="margin-left:15px" href="<%=methods_frenchpress_path %>">
+                    French Press
+                  </a>
+                </li>
+                <li> 
+                  <a style="margin-left:15px" href="<%=methods_clever_path %>">
+                    Clever</a>
+                  </li>
+                <li> 
+                  <a style="margin-left:15px" href="<%=methods_pourover_path %>">
+                    Pour Over
+                  </a>
+                </li>
+                <li> 
+                  <a style="margin-left:15px" href="<%=methods_aeropress_path %>">
+                    Aeropress
+                  </a>
+                </li> 
+                <!-- <li> <a href="<%=methods_mokapot_path %>">Moka Pot</a></li>
+                <li> <a href="<%=methods_siphon_path %>">Siphon</a></li> -->                
+              </ul>
+            </li>
           </td>
           <td class="<%= "current" if request.path == questions_index_path %>">
-            <a href="<%= questions_index_path %>">Dear Dr. Bean</a>
+            <a href="<%= questions_index_path %>">
+              Dear Dr. Bean
+            </a>
           </td>
           <td class="<%= "current" if request.path == ideas_index_path %>">
-            <a href="<%= ideas_index_path %>">Ideas</a>
+            <a href="<%= ideas_index_path %>">
+              Ideas
+            </a>
           </td>
         </tr>
       </table>
@@ -56,6 +88,8 @@
     </footer>
 
   </article>
+
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
 </body>
 </html>
