--- a/app/views/methods/index.html.erb
+++ b/app/views/methods/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Brew Methods</h1>
-<p>Below are some descriptions about the various brew methods we investigate in the experiments and the typical ways they affect the taste of the.</p>
+<p>Below are some descriptions about the various brew methods we investigate in the coffee experiments and the typical ways they affect the taste of the.</p>
 <div>
 	<div>
 	    <div style="float: left; margin-top: 20px">
 	    	<%= image_tag "coffee-experiments-press.png",:width => "100px", :style=>"margin-left: 45px; margin-right: 40px"%>
 		</div>
 
-	    <p>Perhaps the simplest to understand is the Cafetière (French Press, or Press Pot). You add some coarsely ground coffee beans and some water, let them brew for a few minutes, and then use the metal plunger to seal the grounds in the pot while you pour. The result is a rich, full-bodied cup of coffee, with perhaps a little thickness or grittiness at the bottom if your ground is too fine.</p>
+	    <p>Perhaps the simplest to understand is the Cafetiere (French Press, or Press Pot). You add some coarsely ground coffee beans and some water, let them brew for a few minutes, and then use the metal plunger to seal the grounds in the pot while you pour. The result is a rich, full-bodied cup of coffee, with perhaps a little thickness or grittiness at the bottom if your ground is too fine.</p>
 	</div>
 
 	<div>
@@ -14,7 +14,7 @@
 	    	<%= image_tag "coffee-experiments-pourover-large.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 50px"%>
 		</div>
 
-	    <p>If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetière but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness.</p>
+	    <p>If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetiere but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness.</p>
 	</div>
 
 	<div>
@@ -22,7 +22,7 @@
 	    	<%= image_tag "coffee-experiments-clever.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
 		</div>
 
-	    <p>To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.</p>
+	    <p>To get back some of the fullness of taste of a Cafetiere while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.</p>
 	</div>
 
 	<div>
@@ -30,7 +30,7 @@
 	    	<%= image_tag "coffee-experiments-aeropress.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 50px"%>
 		</div>
 
-	    <p>The aeropress is one of the newer additions to the coffee gadget family. Conceived as a way of making an excellent espresso without the need for expensive machinery, it makes an intense coffee that is often dilluted before drinking. Like the Clever it combines the immersion of a french-press with the paper filter of a pour over, but it also requires that you push the water through the beans. This adds an element of pressure which extracts much more flavour in a shorter amount of time.</p>
+	    <p>The aeropress is one of the newer additions to the coffee gadget family. Conceived as a way of making an excellent espresso-like brew without the need for expensive machinery, it makes an intense coffee that is often dilluted before drinking. Like the Clever it combines the immersion of a french-press with the paper filter of a pour over, but it also requires that you push the water through the beans. This adds an element of pressure which extracts much more flavour in a shorter amount of time.</p>
 	</div>
 
 	<div>
@@ -38,7 +38,7 @@
 	    	<%= image_tag "coffee-experiments-mokapot-small.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 40px"%>
 		</div>
 
-	    <p>Just like the aeropress, the moka pot also makes an espresso-like coffee. Thick intense, and excellent for mixing with water, milk or microfoam to make the perfect drink. The moka pot relies on steam pressure to push water up through the coffee grounds. The coffee then collects at the top, with minimal filtration, leading to thick sedimenty coffee.</p>
+	    <p>Just like the aeropress, the moka pot also makes an espresso-like coffee. Thick intense, and excellent for mixing with water, milk or microfoam to make the perfect drink. The moka pot relies on steam pressure to push water up through the coffee grounds. The coffee then collects at the top with minimal filtration, leading to a thick and rich coffee that can be added to hot milk or water.</p>
 	</div>
 
 	<div>
