--- a/app/views/methods/pourover.html.erb
+++ b/app/views/methods/pourover.html.erb
@@ -1,41 +1,37 @@
 <h2>Brew Method: Pour Over</h2>
 <div>
-    <div  class=brewimage>
-        <%= image_tag "coffee-experiments-pourover-V60.png" %>
-    </div>
-  <p>
-    The classic pour over is a filtered, non-immersion style brew method. Also known as the V-60, bee house and melitta drip, the key identifiers are a clean, refined flavor and smooth finish due to the filtered out oils and particulates.  
+  <div  class=brewimage>
+      <%= image_tag "coffee-experiments-pourover-V60.png" %>
+  </div>
+  <p >
+    The classic pour over is a filtered, non-immersion style brew method. Also known as the V-60, bee house, melitta or kalita drip, coffee made using the pour over method is clean, with a refined flavor and smooth finish.
   </p>
 </div>
-
-
-
-
 
 <h3>Pour Over Brew Calculator</h3>
 
   <div class=calctable>
     <div class="presscalcimages">
       <div class="calcapparatusimage calcimage">
-        <div data-g="300" class="pouroverone"></div> 
-        <div data-g="400" class="pourovertwo" style="display:block"></div>        
+        <div data-g="280" class="pouroverone"></div> 
+        <div data-g="350" class="pourovertwo" style="display:block"></div>        
       </div>
       <div class="calcratioimage calcimage">
         <div class="calcratio" style="display:block"></div>        
       </div>
       <div class="calcbeanimage calcimage">
-        <div data-r="15" class="smallbeans"></div>
-        <div data-r="14" class="medbeans" style="display:block"></div>
-        <div data-r="12" class="largebeans"></div>
-        <div data-r="11" class="extrabeans"></div>
+        <div data-r="18" class="smallbeans"></div>
+        <div data-r="16" class="medbeans" style="display:block"></div>
+        <div data-r="15" class="largebeans"></div>
+        <div data-r="14" class="extrabeans"></div>
       </div>
       <div class="calcwaterimage calcimage">
-        <div data-g="300" class="twowaters"></div> 
-        <div data-g="400" class="fourwaters" style="display:block"></div>     
+        <div data-g="280" class="twowaters"></div> 
+        <div data-g="350" class="fourwaters" style="display:block"></div>     
       </div>
       <div class="calcmugimage calcimage">
-        <div data-g="300" class="smallmug"></div>
-        <div data-g="400" class="onemug" style="display:block"></div>
+        <div data-g="280" class="smallmug"></div>
+        <div data-g="350" class="onemug" style="display:block"></div>
       </div>
     </div>
 
@@ -45,44 +41,43 @@
 
           <td><div class="arrowsimage"></div>
             <li>
-              <div id="press-size" style="margin-left: 15px; margin-bottom:3px">Regular
-                <div class="dimensions">V2 - #4 - 400ml</div></div>
+              <div id="press-size" data-g="350" style="margin-left: 15px; margin-bottom:3px"></div>
               <ul class="calc" id="press-size-dropdown">
-                <li data-g="300">Small Cone
-                  <div class="dimensions">V1 - #2 - 300ml</div>
+                <li data-g="280">Small Cone
+                  <div class="dimensions">V1 - #2 - 280ml</div>
                 </li>
-                <li data-g="400">Regular 
-                  <div class="dimensions">V2 - #4 - 400ml</div>
+                <li data-g="350">Regular 
+                  <div class="dimensions">V2 - #4 - 350ml</div>
               </ul>
             </li>
           </td>
 
           <td><div class="arrowsimage"></div>
-            <li><div id="press-ratio" style="margin-left: 15px; margin-bottom:14px">1:14</div>
+            <li><div id="press-ratio" data-r="15" style="margin-left: 15px; margin-bottom:14px"></div>
               <ul class="calc" id="press-ratio-dropdown">
-                  <li data-r="11">1:11</li>
-                  <li data-r="12">1:12</li>
                   <li data-r="14">1:14</li>
                   <li data-r="15">1:15</li>
+                  <li data-r="16">1:16</li>
+                  <li data-r="18">1:18</li>
               </ul>
             </li>
           </td>
 
           <td> 
-            <li style="li:hover: color: white; background: #4b4642" id="press-beans">71g
+            <li style="li:hover: color: white; background: #4b4642" id="press-beans">
             </li>
           </td>
 
           <td>
-            <li  style="li:hover: color: white; background: #4b4642" id="press-water">1000g
+            <li  style="li:hover: color: white; background: #4b4642" id="press-water">
             </li>
           </td>
 
           <td><div class="arrowsimage"></div>
-            <li><div id="press-servings" style="margin-left: 15px; margin-bottom:14px">1 mug</div>
+            <li><div id="press-servings" data-g="350" style="margin-left: 15px; margin-bottom:14px"></div>
               <ul class="calc" id="press-servings-dropdown">
-                  <li data-cell="calcmugimage" data-value="onemug" data-g="300">1 small mug</li>
-                  <li data-cell="calcmugimage" data-value="twomugs" data-g="400">1 mug</li>
+                  <li data-cell="calcmugimage" data-value="onemug" data-g="280">1 small mug</li>
+                  <li data-cell="calcmugimage" data-value="twomugs" data-g="350">1 mug</li>
               </ul>
             </li>
           </td>
@@ -108,7 +103,7 @@
         <%= image_tag "coffee-experiments-instructions-pourover2.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
     </div>
 
-      <p class=instructionsright>2. Preheat water and using a slender spout water kettle, pour over the filter into mug to rinse filter paper and warm the dripper and desired drinking vessel.</p>
+      <p class=instructionsright>2. Preheat water and using a slender spout water kettle, pour over the filter into mug to rinse filter paper and warm all the vessels.</p>
   </div>
 
   <div class=instructions>
@@ -116,7 +111,7 @@
         <%= image_tag "coffee-experiments-instructions-pourover3.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
 
-      <p class=instructionsleft>3. Measure beans on a scale according to the bean water ratio and grind beans in a burr grinder.</p>
+      <p class=instructionsleft>3. Weigh out the correct number of beans on a scale and grind them with a burr grinder.</p>
   </div>
 
   <div class=instructions>
@@ -124,7 +119,7 @@
         <%= image_tag "coffee-experiments-instructions-pourover4.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
     </div>
 
-      <p class=instructionsright>4. Place rinsed and warmed filter, dripper and mug on the scale. Place the fresh grounds into the dripper and give it a gentle shake to flatten the bed of grounds. Tare the scale. *(Remember to remove pre-heat water from vessel)</p>
+      <p class=instructionsright>4. Place rinsed and warmed filter, dripper and mug on the scale. Place the fresh grounds into the dripper and give it a gentle shake to flatten the bed of grounds. Tare the scale. (Remember to remove the pre-heat water from step 2 <i>before</i> adding water to the grounds!)</p>
   </div>
 
   <div class=instructions>
@@ -132,7 +127,7 @@
         <%= image_tag "coffee-experiments-instructions-pourover5.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
 
-      <p class=instructionsleft>5. Starting at the center, pour the water in a slow and even spiral over the grounds to fully saturate the beans and remove air pockets. Let bloom for 30sec.</p>
+      <p class=instructionsleft>5. Starting at the center, pour the water in a slow and even spiral over the grounds to fully saturate the beans and remove air pockets. Then let bloom for 30sec.</p>
   </div>
 
   <div class=instructions>
@@ -140,7 +135,7 @@
         <%= image_tag "coffee-experiments-instructions-pourover6.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
     </div>
 
-      <p class=instructionsright>6. Using the scale to measure, continue to pour the remaining water ratio over the grounds. Be careful to not let the water level rise above the bed of grounds in the dripper.</p>
+      <p class=instructionsright>6. Using the scale to measure, continue to pour the remaining water ratio over the grounds. Be careful to not let the water level rise above the bed of grounds in the dripper, so this should take a few minutes to complete brewing.</p>
   </div>
 
   <div class=instructions>
@@ -148,7 +143,7 @@
         <%= image_tag "coffee-experiments-instructions-pourover7.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
 
-      <p class=instructionsleft>7. When the last desired drips have drained from the dripper, remove the apparatus from the mug and drink immediately.</p>
+      <p class=instructionsleft>7. When the last desired drips have drained from the dripper, remove the apparatus from the mug to drink.</p>
   </div>
 </div>
 
@@ -165,48 +160,48 @@
     </tr>
 
     <tr> 
-      <td>Blue Bottle</td>
-      <td>1:10</td>
-      <td>30s Bloom, 4min</td>
-      <td>Coarse</td>
-      <td>Boil</td>
-      <td>fruity, heavy, creamy</td>
+      <td>Blue Bottle:</br>&nbsp;&nbsp;Drip</td>
+      <td>1:14</br>25g:250g</td>
+      <td>30-45s bloom 2.5min brew</td>
+      <td>sea-salt coarse</td>
+      <td>200°F</td>
+      <td>delicate and complex, simple and clean</td>
     </tr>
 
     <tr> 
-      <td>Stumptown</td>
-      <td>1:16</td>
-      <td>4min</td>
-      <td>Coarse</td>
-      <td>Just to a boil</td>
-      <td>n/a</td>
+      <td>Stumptown:</br>&nbsp;&nbsp;Bee House</td>
+      <td>1:18</br>21g:380g</td>
+      <td>30s bloom, 2.5min brew</td>
+      <td>table-salt fine</td>
+      <td>205°F</td>
+      <td>an easy and convenient way to brew excellent coffee at home</td>
     </tr>
 
     <tr> 
-      <td>Ritual Coffee</td>
-      <td>1:16</td>
-      <td>4min</td>
-      <td>Medium</td>
-      <td>96°C</td>
-      <td>TBD</td>
+      <td>Ritual Coffee:</br>&nbsp;&nbsp;V60</td>
+      <td>1:15</br>25g:380g</td>
+      <td>30-45s bloom</td>
+      <td>#4.5 fine</td>
+      <td>205°F</td>
+      <td>a delicate and complex acidity and ripe, fruited sweetness</td>
     </tr>
 
     <tr> 
-      <td>Sight Glass</td>
-      <td>1:14</td>
-      <td>30sec, Stir, 3:30min</td>
-      <td>Coarser</td>
-      <td>Boil, let cool a few min</td>
-      <td>TBD</td>
+      <td>Sight Glass:</br>&nbsp;&nbsp;V60</td>
+      <td>1:16</br>20g:320g</td>
+      <td>30s bloom, 3.5min brew</td>
+      <td>medium-fine</td>
+      <td>1min after boiling</td>
+      <td>brews quickly and makes a nuanced, balanced cup</td>
     </tr>
 
     <tr> 
-      <td>Verve</td>
-      <td>1:11</td>
-      <td>30sec, Stir, 3min</td>
-      <td>Coarse</td>
-      <td>90°-96°C</td>
-      <td>TBD</td>
+      <td>Verve:</br>&nbsp;&nbsp;V60</td>
+      <td>1:15</br>20g:300g</td>
+      <td>30s bloom, 3 min brew</td>
+      <td>medium</td>
+      <td>after boil</td>
+      <td>delicious.</td>
     </tr>
 
   </table>
