--- a/app/views/methods/aeropress.html.erb
+++ b/app/views/methods/aeropress.html.erb
@@ -1,71 +1,131 @@
 <h2>Brew Method: Aeropress</h2>
-<div>
-    <div  class=brewimage>
-        <%= image_tag "coffee-experiments-aeropress.png", :style => "width: 80px" %>
-    </div>
+<div class=brew-description>
+  <div class=brewimage>
+      <%= image_tag "coffee-experiments-aeropress.png", :style => "width: 80px" %>
+  </div>
   <p>
-  	Latte macchiato roast as sit organic, barista lungo plunger pot ristretto, coffee dark id and, doppio iced chicory mazagran, coffee crema pumpkin spice affogato crema grounds. Cup filter decaffeinated breve, frappuccino mug brewed. 
+    An immersion, filtered, and high extraction method from pressure to make a strong espresso like brew. This method can be performed in a variety of ways.  Can be prepared using the inverted or non-inverted method. Key identifiers are smooth, full flavor, and refined.
   </p>
 </div>
 
-<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
-	<div>
-      <table>
-        <tr> 
-	      <th>Source</th>
-	      <th>Bean:H2O</th>
-	      <th>Time</th>
-	      <th>Grind</th>
-	      <th>Temp</th>
-	      <th>Bean</th>
-        </tr>
 
-        <tr> 
-          <td>Blue Bottle</td>
-          <td>1:10</td>
-      	  <td>30s Bloom, 4min</td>
-      	  <td>Coarse</td>
-      	  <td>Boil</td>
-      	  <td>fruity, heavy, creamy</td>
-        </tr>
+<h3 class=brew-title>Instructions: Inverted Method</h3>
+<div>
 
-        <tr> 
-          <td>Stumptown</td>
-          <td>1:16</td>
-      	  <td>4min</td>
-      	  <td>Coarse</td>
-      	  <td>Just to a boil</td>
-      	  <td>n/a</td>
-        </tr>
-
-        <tr> 
-          <td>Ritual Coffee</td>
-          <td>1:16</td>
-      	  <td>4min</td>
-      	  <td>Medium</td>
-      	  <td>96°C</td>
-      	  <td>TBD</td>
-        </tr>
-
-        <tr> 
-          <td>Sight Glass</td>
-          <td>1:14</td>
-      	  <td>30sec, Stir, 3:30min</td>
-      	  <td>Coarser</td>
-      	  <td>Boil, let cool a few min</td>
-      	  <td>TBD</td>
-        </tr>
-
-        <tr> 
-          <td>Verve</td>
-          <td>1:11</td>
-      	  <td>30sec, Stir, 3min</td>
-      	  <td>Coarse</td>
-      	  <td>90°-96°C</td>
-      	  <td>TBD</td>
-        </tr>
-
-      </table>
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-aeropress1.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
-    
+
+      <p class=instructionsleft>1. Assemble the plunger into the main vessel so the rubber stopper is aligned with the bottom of the “4”.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-aeropress2.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>2. Pour pre-heated water into the aeropress to rinse and warm the brew vessel. Discard water into the mug to warm the drinking vessel as well.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-aeropress3.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>3. Grind 2 scoops of beans in a burr grinder. Using the funnel, put them in the aeropress. Give a gentle shake to even the bed of grounds.</p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-aeropress4.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>4. Pour enough water into the vessel to cover the bed of grounds. Make sure there are no air pockets and all beans are saturated. Start the timer and bloom for 30sec.</p>
+  </div>
+
+  <div class=instructions>
+    <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-aeropress5.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>5. Pour the remaining water up to the top of the “1” mark.</p>
+  </div>
+
+  <div class=instructions>
+    <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-aeropress6.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>6. At 1 minute on the timer, place the filter in the filter cap and attach firmly on the top of the press. (Remember to remove the pre-heat water from step 2 <i>before</i> adding coffee to the mug!)</p>
+  </div>
+
+  <div class=instructions>
+    <div style="float: left">
+        <%= image_tag "coffee-experiments-instructions-aeropress7.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
+    </div>
+
+      <p class=instructionsleft>7. Carefully invert the whole apparatus onto the drinking vessel, and over 15-20sec press down on the plunger to push the water through the beans into the drinking vessel. <i> Note: the funnel can be used inbetween the aeropress and mug if the mug mouth is too narrow for the aeropress. </i></p>
+  </div>
+
+  <div class=instructions>
+      <div style="float: right">
+        <%= image_tag "coffee-experiments-instructions-aeropress8.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
+    </div>
+
+      <p class=instructionsright>8. Enjoy this very strong brew, or add enough hot water to fill the drinking vessel (total liquid will be about 300ml).</p>
+  </div>
+
+</div>
+
+<h3>Aeropress Variables Table</h3>
+<div class=brewtable>
+  <table class=brewtable>
+    <tr> 
+    <th>Source</th>
+    <th>Bean:H2O</th>
+    <th>Time</th>
+    <th>Grind</th>
+    <th>Temp</th>
+    <th>Notes</th>
+    </tr>
+
+    <tr> 
+      <td>Blue Bottle: </br>&nbsp;Inverted</td>
+      <td>1:13</br>15g:190g</td>
+      <td>30s bloom, 1min brew</td>
+      <td>fine grind - a bit more than for drip</td>
+      <td>200°F</td>
+      <td>produces a cup that’s thick and focused, but still quite nuanced.</td>
+    </tr>
+
+    <tr> 
+      <td>Stumptown: </br>&nbsp;Inverted</td>
+      <td>1:12</br>17g:200g</td>
+      <td>1min brew</td>
+      <td>breadcrumb coarse</td>
+      <td>205°F</td>
+      <td>an easy way to get truly excellent coffee at home</td>
+    </tr>
+
+    <tr> 
+      <td>Ritual:</br>&nbsp;Non-Inverted</td>
+      <td>1:15</br>15g:225g</td>
+      <td>1.5min brew</td>
+      <td>#3.5 (very fine)</td>
+      <td>205°F</td>
+      <td>highly recommend as travel companion. Sturdy brewing system you can bring just about anywhere.</td>
+    </tr>
+
+    <tr> 
+      <td>Sight Glass: </br>&nbsp;Non-Inverted</td>
+      <td>1:12</br>17g:200g</td>
+      <td>45s brew</td>
+      <td>table salt</td>
+      <td>1min after boiling</td>
+      <td>a wonderfully clean, refined, and expressive brew</td>
+    </tr>
+
+  </table>
+</div>
 
