--- a/app/views/methods/clever.html.erb
+++ b/app/views/methods/clever.html.erb
@@ -1,41 +1,37 @@
 <h2>Brew Method: Clever</h2>
 <div>
-    <div  class=brewimage>
+    <div  class=brewimage style="height:120px">
         <%= image_tag "coffee-experiments-clever.png" %>
     </div>
   <p>
-    The clever is a hybrid full-immersion and filtered brew method. Keeping the best features from the french press and the pour over, but removing the drawbacks by controlling the amount of steeping time, and filtering out the suspended grit. Key identifiers are  a full bodied and smooth finish.
+    The Clever is a hybrid full-immersion and filtered brew method. Keeping the best features from the french press and the pour over, but removing some of the drawbacks by controlling the steeping time, and filtering out any suspended particulates. Coffee made with a Clever tends to be full bodied with a smooth finish.
   </p>
 </div>
-
-
-
-
 
 <h3>Clever Brew Calculator</h3>
 
   <div class=calctable>
     <div class="presscalcimages">
       <div class="calcapparatusimage calcimage">
-        <div data-g="300" class="cleverone"></div> 
-        <div data-g="400" class="clevertwo" style="display:block"></div>        
+        <div data-g="280" class="cleverone"></div> 
+        <div data-g="350" class="clevertwo" style="display:block"></div>        
       </div>
       <div class="calcratioimage calcimage">
         <div class="calcratio" style="display:block"></div>        
       </div>
       <div class="calcbeanimage calcimage">
-        <div data-r="15" class="smallbeans"></div>
-        <div data-r="14" class="medbeans" style="display:block"></div>
-        <div data-r="12" class="largebeans"></div>
-        <div data-r="11" class="extrabeans"></div>
+        <div data-r="19" class="smallbeans"></div>
+        <div data-r="17" class="medbeans" style="display:block"></div>
+        <div data-r="15" class="largebeans"></div>
+        <div data-r="12" class="extrabeans"></div>
       </div>
       <div class="calcwaterimage calcimage">
-        <div data-g="300" class="twowaters"></div> 
-        <div data-g="400" class="fourwaters" style="display:block"></div>     
+        <div data-g="280" class="twowaters"></div> 
+        <div data-g="350" class="fourwaters" style="display:block"></div>     
       </div>
       <div class="calcmugimage calcimage">
-        <div data-g="300" class="smallmug"></div>
-        <div data-g="400" class="onemug" style="display:block"></div>
+        <div data-g="280" class="smallmug"></div>
+        <div data-g="350" class="onemug" style="display:block"></div>
       </div>
     </div>
 
@@ -45,44 +41,45 @@
 
           <td><div class="arrowsimage"></div>
             <li>
-              <div id="press-size" style="margin-left: 15px; margin-bottom:3px">Regular
-                <div class="dimensions">V2 - #4 - 400ml</div></div>
+              <div id="press-size" data-g="350" style="margin-left: 15px; margin-bottom:3px"></div>
               <ul class="calc" id="press-size-dropdown">
-                <li data-g="300">Small Cone
-                  <div class="dimensions">V1 - #2 - 300ml</div>
+                <li data-g="280">Small Cone
+                  <div class="dimensions">V1 - #2 - 280ml</div>
                 </li>
-                <li data-g="400">Regular 
-                  <div class="dimensions">V2 - #4 - 400ml</div>
+                <li data-g="350">Regular 
+                  <div class="dimensions">V2 - #4 - 350ml</div>
               </ul>
             </li>
           </td>
 
           <td><div class="arrowsimage"></div>
-            <li><div id="press-ratio" style="margin-left: 15px; margin-bottom:14px">1:14</div>
+            <li><div id="press-ratio" data-r="15" style="margin-left: 15px; margin-bottom:14px">
+            </div>
               <ul class="calc" id="press-ratio-dropdown">
-                  <li data-r="11">1:11</li>
                   <li data-r="12">1:12</li>
-                  <li data-r="14">1:14</li>
                   <li data-r="15">1:15</li>
+                  <li data-r="17">1:17</li>
+                  <li data-r="19">1:19</li>
               </ul>
             </li>
           </td>
 
           <td> 
-            <li style="li:hover: color: white; background: #4b4642" id="press-beans">71g
+            <li style="li:hover: color: white; background: #4b4642" id="press-beans">
             </li>
           </td>
 
           <td>
-            <li  style="li:hover: color: white; background: #4b4642" id="press-water">1000g
+            <li  style="li:hover: color: white; background: #4b4642" id="press-water">
             </li>
           </td>
 
           <td><div class="arrowsimage"></div>
-            <li><div id="press-servings" style="margin-left: 15px; margin-bottom:14px">1 mug</div>
+            <li><div id="press-servings" style="margin-left: 15px; margin-bottom:14px">
+              9</div>
               <ul class="calc" id="press-servings-dropdown">
-                  <li data-cell="calcmugimage" data-value="onemug" data-g="300">1 small mug</li>
-                  <li data-cell="calcmugimage" data-value="twomugs" data-g="400">1 mug</li>
+                  <li data-cell="calcmugimage" data-value="onemug" data-g="280">1 small mug</li>
+                  <li data-cell="calcmugimage" data-value="twomugs" data-g="350">1 mug</li>
               </ul>
             </li>
           </td>
@@ -100,7 +97,7 @@
         <%= image_tag "coffee-experiments-instructions-clever1.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
 
-      <p class=instructionsleft>1. Fold the filter paper at the seam and place it in a clean cone.</p>
+      <p class=instructionsleft>1. Fold the filter paper at the seam and place it in the Clever.</p>
   </div>
 
   <div class=instructions>
@@ -108,7 +105,8 @@
         <%= image_tag "coffee-experiments-instructions-clever2.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
     </div>
 
-      <p class=instructionsright>2. Preheat water and using a slender spout water kettle, pour into clever to rinse filter paper and then decant into the mug to warm.</p>
+      <p class=instructionsright>2. Preheat water and using a slender spout water kettle, pour a small amount into the Clever to rinse the filter paper. You can
+        run this water off into your mug to preheat the mug too.</p>
   </div>
 
   <div class=instructions>
@@ -116,7 +114,7 @@
         <%= image_tag "coffee-experiments-instructions-clever3.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
 
-      <p class=instructionsleft>3. Measure beans on a scale according to the bean water ratio and grind beans in a burr grinder. Place fresh grounds into the pre-rinsed clever and give it a gentle shake to flatten the bed of grounds. Tare the scale.</p>
+      <p class=instructionsleft>3. Measure the beans on a scale and grind them in a burr grinder. Place fresh grounds into the Clever and give it a gentle shake so the grinds lie flat instead of in a heap. Tare the scale.</p>
   </div>
 
   <div class=instructions>
@@ -132,7 +130,7 @@
         <%= image_tag "coffee-experiments-instructions-clever5.png",:width => "100px", :style=>"margin-left: 50px; margin-right: 30px"%>
     </div>
 
-      <p class=instructionsleft>5. Using the scale to measure, continue to pour the remaining water ratio over the grounds. Let steep for an additional 3-4 min depending on preferred extraction time and grind.</p>
+      <p class=instructionsleft>5. Using the scales to measure, add the remaining water to the Clever. Then steep the coffee for an additional 3:30 min to extract the necessary flavour.</p>
   </div>
 
   <div class=instructions>
@@ -140,40 +138,49 @@
         <%= image_tag "coffee-experiments-instructions-clever6.png",:width => "100px", :style=>"margin-left: 35px; margin-right: 50px"%>
     </div>
 
-      <p class=instructionsright>6. Discard pre-heat water from warming mug. Place the clever on drinking vessel to decant the brew. When the last drops are free from the clever, remove brew vessel from the mug. Enjoy.</p>
+      <p class=instructionsright>6. Discard pre-heat water from your mug. Place the Clever on the drinking vessel to decant the coffee. When the last drops are free from the Clever, enjoy.</p>
   </div>
 </div>
 
-<h3>Clever Variables Table</h3>
+<h3>Clever Variables</h3>
 <div class=brewtable>
   <table class=brewtable>
+
+
     <tr> 
-    <th>Source</th>
-    <th>Bean:H2O</th>
-    <th>Time</th>
-    <th>Grind</th>
-    <th>Temp</th>
-    <th>Notes</th>
+      <th>Source</th>
+      <th>Bean:H2O</th>
+      <th>Time</th>
+      <th>Grind</th>
+      <th>Temp</th>
+      <th>Notes</th>
     </tr>
 
     <tr> 
       <td>Sight Glass</td>
-      <td>1:19</td>
+      <td>1:19</br>20g:380g</td>
       <td>30s Bloom, 3:30min brew</td>
-      <td>medium-coarse0</td>
+      <td>medium-coarse</td>
       <td>after the boil</td>
       <td>full, even extraction with a heavy body and mouth feel</td>
     </tr>
 
     <tr> 
       <td>Verve</td>
-      <td>1:15</td>
-      <td>30s Bloom, 3min brew</td>
+      <td>1:15</br>20g:300g</td>
+      <td>30s bloom, 3min brew</td>
       <td>18-22, same as french press</td>
       <td>after the boil</td>
       <td>basically a full immersion brewer to provide a consistently amazing coffee</td>
     </tr>
-
+    <tr> 
+      <td>Coffee Experiments Preference</td>
+      <td>1:17</br>24g:400g</td>
+      <td>30s bloom, 3:30min brew</td>
+      <td>medium</td>
+      <td>96°C</td>
+      <td>more full flavor range than the V-60 pourover, smooth mouth feel</td>
+    </tr>
   </table>
 </div>
 
