--- a/app/views/methods/siphon.html.erb
+++ b/app/views/methods/siphon.html.erb
@@ -4,7 +4,7 @@
         <%= image_tag "coffee-experiments-siphon.png",:style => "width:120px" %>
     </div>
   <p>
-  	To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.  
+  	To get back some of the fullness of taste of a Cafetiere while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.  
   </p>
 </div>
 
